Video freezes with network delay and rtx enabled
Categories
(Core :: WebRTC: Audio/Video, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox79 | --- | fixed |
People
(Reporter: dminor, Assigned: dminor)
Details
Attachments
(1 file)
This reproduces for me on Firefox <-> Firefox calls on whereby.com, with rtx enabled and the OS X network link conditioner on one side of the call configured to introduce 150ms of uplink and downlink delay. With rtx disabled, I see some occasional glitches, but they are not nearly as common.
I also tested Firefox <-> Chrome, and Firefox <-> Firefox on meet.jit.si, and they don't seem to be affected. There are some glitches, but the overall rate seemed similar to Firefox <-> Firefox on whereby.com with rtx disabled.
Assignee | ||
Comment 1•4 years ago
|
||
To make this less hand-wavy, with rtx enabled the glitches/freezes last 3 or 4 seconds. With it disabled, they are less than 1 second.
The problems do not reproduce if I comment out the code in VideoConduit that configures sending RTX on the laptop with the network link conditioner running.
Assignee | ||
Comment 2•4 years ago
|
||
So after testing everything else first, this turned out to be the MID filter again. We weren't copying the MID into RTX packets, so there was no opportunity for the MID filter to learn the SSRC associated with RTX and so it was filtering out all of the received RTX packets.
Assignee | ||
Comment 3•4 years ago
|
||
This change is already present upstream.
Comment 5•4 years ago
|
||
bugherder |
Description
•