Bug 1645127 - Copy MID from source packet to RTX packet; r=ng

This change is already present upstream.

Differential Revision: https://phabricator.services.mozilla.com/D79548